Fri Aug 17 08:07:12 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/Map_T.(h i): made the return value of
          ACE_Incremental_Key_Generator::current_value const T& instead
          of T&. Added uppercase traits to the ACE_Map class.

Thu Aug 16 19:27:29 2001  Steve Huston  <shuston@riverace.com>

        * ace/Process.cpp (ACE_Process_Options::pass_handle): Add
          "::" to front of "DuplicateHandle" so the WinCE compiler
          sees the right function.
          Also added ctor/dtor for ACE_Managed_Process to try and fix the
          can't find vtable error on Linux.

        * ace/Process.h: Added a constructor for ACE_Managed_Process
          to fix "can't find vtable" error on Linux.

        * ace/Process.i: Moved ACE_Managed_Process dtor to .cpp file.

Thu Aug 16 15:10:42 2001  Steve Huston  <shuston@riverace.com>

        * ace/Process.h (pass_handle): Clarify comments for this method.

        * ace/Process_Manager.cpp:
        * ace/Process.(h i): Moved the ACE_Managed_Process class out
          of Process_Manager.cpp, exposing it for general use.

Thu Aug 16 10:34:20 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/POSIX_Proactor.cpp (allocate_aio_slot): Added a fix so that
	  the POSIX Proactor compiles with FreeBSD 4.4.  Thanks to Yev
 	  Omenzel <omenzel@yahoo.com> for reporting this and to Craig
 	  Rodrigues <crodrigu@bbn.com> for fixing it and to
	  John E Hein <jhein@timing.com> for fixing the fix ;-)

Thu Aug 16 08:09:53 2001  Chad Elliott  <elliott_c@ociweb.com>

        * tests/run_test.lst:

          Added the OTHER requirement to the Thread_Pool_Reactor_Test and
          the Thread_Pool_Reactor_Resume_Test.  These are only built if
          OTHER is part of the ACE components list.


Wed Aug 15 15:50:38 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/WFMO_Reactor.cpp: Don't try to purge the notifications if
	  notify_handler_ is 0.  Thanks to Edan Ayal